@@ -1,3 +1,4 @@
+* Do not set LDAP password on set_preferences
 * Remove support for Python 2.7
 
 Version 4.8.0 - 2018-04-23
